Adding an option to generate images for older non-HC SD cards.
- This open just multiplies the start block with 512 to convert it into a byte value.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -78,7 +78,55 @@
      </widget>
     </item>
     <item>
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>8</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
+     <widget class="QCheckBox" name="nonHcCards">
+      <property name="toolTip">
+       <string>If you check this box, a special compatibility image format is created for older non-HC SD cards.</string>
+      </property>
+      <property name="statusTip">
+       <string>Create an image for older non-HC SD cards.</string>
+      </property>
+      <property name="text">
+       <string>Create image for older non-HC SD cards.</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>8</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>8</number>
+      </property>
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -158,7 +206,6 @@
    <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionGenerate">
    <property name="text">
     <string>&amp;Generate...</string>
